--- a/assets/detail/tentang.html
+++ b/assets/detail/tentang.html
@@ -17,54 +17,54 @@
 
     <link rel="stylesheet" type="text/css" href="../style/style.css">
 
-    <title>Hello, world!</title>
+    <title>Tentang</title>
   </head>
   <body>
      <!-- Navbar -->
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
-    <div class="container">
-        <a class="navbar-brand pr-5" href="../../index.html">
-            <img src="../img/bite.png" width="90">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../../index.html">Beranda </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#menu">Menu</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="tentang.html">Tentang<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="kontak.html">Kontak</a>
-                </li>
-            <div class="container pl-5">
-                <li class="nav-item">
-                    <a class="navbar-brand pr-5" href="#user">
-                        <img src="../img/user.svg" width="30">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand pr-5" href="#search">
-                        <img src="../img/search.svg" width="30">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand" href="#search">
-                        <img src="../img/shopping-cart.svg" width="30">
-                    </a>
-                </li>
-                </ul>
+     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
+        <div class="container">
+            <a class="navbar-brand pr-5" href="../../index.html">
+                <img src="../img/BiTE.png" width="90">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Beranda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../detail/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../detail/tentang.html">Tentang<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../detail/kontak.html">Kontak</a>
+                    </li>
+                <div class="container pl-5">
+                    <li class="nav-item">
+                        <a class="navbar-brand pr-5" href="#user">
+                            <img src="../img/user.svg" width="30">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand pr-5" href="#search">
+                            <img src="../img/search.svg" width="30">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="#search">
+                            <img src="../img/shopping-cart.svg" width="30">
+                        </a>
+                    </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
     <!-- Akhir Navbar -->
 
     <!-- jumbotron -->
@@ -121,7 +121,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
