--- a/assets/detail/kontak.html
+++ b/assets/detail/kontak.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" type="text/css" href="../style/style.css">
 
-    <title>Hello, world!</title>
+    <title>Kontak</title>
   </head>
   <body>
      <!-- Navbar -->
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
     <div class="container">
         <a class="navbar-brand pr-5" href="../../index.html">
-            <img src="../img/bite.png" width="90">
+            <img src="../img/BiTE.png" width="90">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -172,7 +172,7 @@
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
