--- a/assets/detail/menu.html
+++ b/assets/detail/menu.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     
-    <title>Restoran</title>
+    <title>Menu</title>
   </head>
   <body>
 
@@ -21,8 +21,8 @@
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
     <div class="container">
-        <a class="navbar-brand pr-5" href="index.html">
-            <img src="../img/bite.png" width="90">
+        <a class="navbar-brand pr-5" href="../../index.html">
+            <img src="../img/BiTE.png" width="90">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
