--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
     <div class="container">
         <a class="navbar-brand pr-5" href="index.html">
-            <img src="assets/img/bite.png" width="90">
+            <img src="assets/img/BiTE.png" width="90">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
